# macrobot

./: .gitignore  LICENSE.txt  README.md  publish_notes  pyproject.toml  readthedocs.yml
docs/: authors.rst  changelog.rst  conf.py  index.rst  installation.rst  introduction.rst  macrobot.rst  pathogens.rst  requirements.txt  use_case.rst
docs/_build/doctrees/: authors.doctree  changelog.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  license.doctree  macrobot_pipeline.doctree  pathogens.doctree
docs/_build/html/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  installation.html  introduction.html  license.html  macrobot_pipeline.html  objects.inv  pathogens.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: authors.rst.txt  index.rst.txt  (+5 more)
docs/images/: bgt_leaf.tif  bgt_pred.tif
macrobot/: bgt.py  bipolaris.py  cli.py  data_managment.py  helpers.py  log.txt  mb_pipeline.py  net_blotch_latrobe.py  orga.py  prediction.py  puccinia.py  puccinia_ipk.py  report.html  requirements.txt  segmentation.py  settings.ini  settings_ipk.ini  settings_latrobe.ini
macrobot/tests/: gb2_exp40_leaf.csv  image_backlight.npy  image_blue.npy  image_green.npy  image_red.npy  image_tresholded.npy  image_uvs.npy  lanes_roi_backlight.npy  lanes_roi_binary.npy  lanes_roi_minrgb.npy  lanes_roi_rgb.npy  max_rgb_data.npy  min_rgb_data.npy  predicted_lanes.npy  test_bgt.py  test_helpers.py  test_macrobot.py  test_mildew.py  whitebalance_data.npy
paper/: paper.bib  paper.md
tests/: test_macrobot.py
