[tool.poetry]
name = "macrobot"
version = "0.1.6"
description = ""
authors = ["Stefanie Lueck <lueck@ipk-gatersleben.de>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
scikit-image = "^0.16.2"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mb = "macrobot.cli:main"
te = "macrobot.tests.test_macrobot:test_version"